# OpenSpaceEGSE

./: README.md  pyproject.toml
src/openspace_egse/: __init__.py  config.py
src/openspace_egse/ccsds/: __init__.py  receive_flow.py  sdlp.py  sdlp_uart.py  send_flow.py  space_packet.py  telemetry.py
src/openspace_egse/gui/: __init__.py  app.py
tests/: test_receive_flow.py  test_sdlp_transfer_frames.py  test_sdlp_uart_stream.py  test_send_flow.py  test_space_packet.py  test_telemetry.py
