[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspace-egse"
version = "0.1.0"
description = "Python EGSE application for on-ground satellite testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openspace-egse-gui = "openspace_egse.gui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
gui = [
    "matplotlib>=3.8",
    "pyserial>=3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
